# jpeg_decoder

./: .gitignore  CMakeLists.txt  README.md  common.cmake
include/: constants.h  decoder.h  huffman_tree.h  libjpg_reader.h  matrix.h  reader.h  test_commons.h
jpeg_decoder/: CMakeLists.txt
jpeg_decoder/include/: constants.h  decoder.h  huffman_tree.h  matrix.h  reader.h  test_commons.h
jpeg_decoder/logger/: logger.h
jpeg_decoder/src/: decoder.cpp  reader.cpp  test_decoder.cpp
logger/: logger.h
src/: decoder.cpp  reader.cpp  test_baseline.cpp
